[gd_scene load_steps=9 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://assets/Powerup/Mouette.gd" type="Script" id=2]
[ext_resource path="res://assets/Sound/mouette.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/Sound/mouette_death.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/Sound/mouette_death1.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/AudioBankPlayer.gd" type="Script" id=6]
[ext_resource path="res://assets/Sound/mouette_death2.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 41.8792, 35.5659 )

[node name="Mouette" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="HitboxShape" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="SoundFx" type="Node" parent="."]

[node name="SpawnSound" type="AudioStreamPlayer" parent="SoundFx"]
stream = ExtResource( 3 )

[node name="DeathSound" type="AudioStreamPlayer" parent="SoundFx"]
script = ExtResource( 6 )
sounds = [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 7 ) ]

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="finished" from="SoundFx/DeathSound" to="." method="_on_DeathSound_finished"]
